<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.LoginFragment"
    android:background="@drawable/loginbg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/wc_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_account"
        android:textSize="28sp"
        android:textStyle="bold"
        android:background="#1E9DEBF4"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/fb_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:src="@drawable/fblgin"
        android:layout_margin="28dp"
        android:clickable="true"
        android:elevation="10dp"
        app:layout_constraintStart_toStartOf="@id/wc_txt"
        app:layout_constraintEnd_toEndOf="@id/wc_txt"
        app:layout_constraintTop_toBottomOf="@id/wc_txt"/>

    <ImageView
        android:id="@+id/g_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:src="@drawable/glogn"
        android:layout_margin="28dp"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="@id/fb_login"
        app:layout_constraintEnd_toEndOf="@id/fb_login"
        app:layout_constraintTop_toBottomOf="@id/fb_login"/>
    <TextView
        android:id="@+id/cua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_continue_with_email"
        android:textColor="#989898"
        app:layout_constraintStart_toStartOf="@id/g_login"
        app:layout_constraintEnd_toEndOf="@id/g_login"
        app:layout_constraintTop_toBottomOf="@+id/g_login"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxBackgroundColor="#F2F3F7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:hint="@string/username"
        android:layout_margin="20dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cua">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxBackgroundColor="#F2F3F7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:hint="@string/email_address"
        android:layout_margin="20dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputemail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_pass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxBackgroundColor="#F2F3F7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        android:hint="@string/password"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_email">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputpass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textPassword"
        android:maxLines="1"
        android:imeOptions="actionDone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/btn_Register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:src="@drawable/registerbtn"
        android:layout_margin="25dp"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="@id/sign_pass"
        app:layout_constraintEnd_toEndOf="@id/sign_pass"
        app:layout_constraintTop_toBottomOf="@id/sign_pass"/>
    <TextView
        android:id="@+id/acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="48dp"
        android:textStyle="bold"
        android:textColor="#C98E8D8D"
        app:layout_constraintStart_toStartOf="@id/btn_Register"
        app:layout_constraintEnd_toEndOf="@id/btn_Register"
        app:layout_constraintTop_toBottomOf="@id/btn_Register"/>

    <TextView
        android:id="@+id/btn_LogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:clickable="true"
        android:text="@string/log_in"
        android:textColor="#3897FD"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/acc"
        app:layout_constraintStart_toEndOf="@id/acc"

        app:layout_constraintTop_toBottomOf="@id/btn_Register" />
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/overley"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:backgroundTint="#C0CFCA"
            app:cardElevation="10dp"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        <ProgressBar
            android:id="@+id/p_bar_login"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:elevation="12dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:progressDrawable="@drawable/custom_p_bar"/>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>